2010-07-20  Dave Korn  <dave.korn.cygwin@gmail.com>

	* libm/common/fdlibm.h (SAFE_LEFT_SHIFT): New macro definition.
	(SAFE_RIGHT_SHIFT): Likewise.
	* libm/common/s_llround.c (llround): Annotate shift operations with
	possible shift amount ranges, and use SAFE_RIGHT_SHIFT to avoid
	undefined behaviour.
	* libm/common/s_lround.c (lround): Likewise.

2010-07-19  Eric Blake  <eblake@redhat.com>

	* libc/stdio/mktemp.c (_gettemp): Add parameter, all callers
	changed.
	(mkostemp, _mkostemp_r, mkostemps, _mkostemps_r): New interfaces,
	for ELIX level 4.
	* libc/include/stdlib.h (mktemp): Avoid namespace issues.
	(mkostemp, mkostemps): Declare.

2010-07-13  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/signal.h (sighandler_t): Only define if _POSIX_SOURCE
	is undefined.

2010-07-06  Corinna Vinschen  <corinna@vinschen.de>

	* libc/posix/rewinddir.c (rewinddir): Remove incorrect cast to off_t.
	* libc/sys/rtems/sys/dirent.h (_seekdir): Add prototype.
	* libc/sys/linux/sys/dirent.h (_seekdir): Fix prototype to use long
	rather than off_t.

2010-07-01  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/signal.h (sighandler_t): Add typedef.

2010-06-29  Antony King  <antony.king@st.com>

	* libc/ctype/ctype_.c (__ctype_ptr): Reinstate definition (guarded by
	_NEED_OLD_CTYPE_PTR_DEFINITION) for backwards compatibility with newlib
	1.16.0 and earlier.

2010-06-28  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/sys/stat.h: Add ACCESSPERMS, ALLPERMS, and DEFFILEMODE.

2010-06-18  Pavel Pisa <ppisa4lists@pikron.com>

	* libc/include/machine/ieeefp.h[__arm__][!__VFP_FP__]: Set to
	__IEEE_BIG_ENDIAN and set __IEEE_BYTES_LITTLE_ENDIAN appropriately
	based on __ARMEL flag.
	* libc/include/machine/endian.h: To set byte order to LITTLE_ENDIAN,
	check for __IEEE_LITTLE_ENDIAN or __IEEE_BYTES_LITTLE_ENDIAN.

2010-06-09  Paul Brook  <paul@codesourcery.com>

	* libc/include/sys/reent.h (_reent): Adjust _REENT_SMALL to be